# triad

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  flake.nix  pyproject.toml
docs/: 4d_gaussian_research.md  api_improvements.md  api_summary.md  api_usage_example.md  clone_analysis.md  clone_findings_summary.md  crate_structure.md  readiness_report.md  research-path.md  resource_sharing_analysis.md  separation_improvements.md  setup_summary.md
examples/: realtime_reconstruction.rs  triangle_splatting.rs
python/triad_py/: __init__.py  curriculum.py  ppo.py  rollout.py  training_log.py
python/triad_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
triad-app/: Cargo.toml
triad-app/src/: app.rs  camera.rs  layers.rs  main.rs  menu.rs  multi_delegate.rs
triad-app/src/renderer_manager/: blend.rs  constants.rs  errors.rs  frame_graph_builder.rs  layer_factory.rs  layer_resources.rs  mod.rs  passes.rs
triad-capture/: Cargo.toml
triad-capture/src/: lib.rs  source.rs  webcam.rs
triad-cubes/: Cargo.toml
triad-cubes/src/: main.rs
triad-data/: Cargo.toml  README.md
triad-data/src/: lib.rs  triangulation.rs  types.rs
triad-data/src/ply/: loader.rs  mod.rs  vertex.rs
triad-gpu/: Cargo.toml
triad-gpu/examples/: compute.rs
triad-gpu/shaders/: debug_test.wgsl  gaussian_fragment.wgsl  gaussian_sort.wgsl  gaussian_vertex.wgsl  layer_blend.wgsl  point_fragment.wgsl  point_vertex.wgsl  triangle_compute.wgsl  triangle_fragment.wgsl  triangle_vertex.wgsl
triad-gpu/src/: builder.rs  compute.rs  copy.rs  delegate.rs  error.rs  frame_slot.rs  indirect.rs  lib.rs  main.rs  pipeline.rs  ply_loader.rs  reference_pipeline.rs  render.rs  renderer_manager.rs  resource_registry.rs  shader.rs  shaders.rs  spatial_grid.rs  surface.rs  test_util.rs  triangulation.rs  type_map.rs  types.rs
triad-gpu/src/delegates/: gaussian.rs  mod.rs  point.rs  triangle.rs
triad-gpu/src/frame_graph/: execution.rs  mod.rs  pass.rs  resource.rs
triad-headless/: Cargo.toml
triad-headless/src/: main.rs
triad-py/: Cargo.toml
triad-py/src/: lib.rs
triad-sim/: Cargo.toml
triad-sim/src/: course.rs  gpu_sim.rs  lib.rs  red_square.rs
triad-train/: Cargo.toml  README.md
triad-train/src/: lib.rs
triad-train/src/ingest/: camera.rs  mod.rs  ply_stream.rs  point_cloud.rs
triad-train/src/reconstruction/: initializer.rs  mod.rs  updater.rs
triad-train/src/scene/: gaussian_4d.rs  mod.rs  scene_graph.rs  temporal.rs
triad-ui/: Cargo.toml
triad-ui/src/: atlas.rs  lib.rs  primitives.rs  text.rs
triad-ui/src/shaders/: text.wgsl
triad-ui/src/widgets/: label.rs  mod.rs  toggle.rs
triad-visualizer/: Cargo.toml
triad-visualizer/src/: main.rs
triad-window/: Cargo.toml
triad-window/src/: app.rs  camera.rs  camera_uniforms.rs  controls.rs  gaussian.rs  lib.rs  main.rs
triad_py/: __init__.py  __main__.py
