[workspace]
members = [
"triad-gpu",
"triad-window",
"triad-train",
"triad-data",
"triad-capture",
"triad-app",
]
resolver = "3"

[workspace.dependencies]
triad-gpu = { path = "triad-gpu" }
triad-window = { path = "triad-window" }
triad-train = { path = "triad-train" }
triad-data = { path = "triad-data" }
triad-capture = { path = "triad-capture" }
glam = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"
bytemuck = { version = "1.24", features = ["derive"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"