[workspace]
members = [
"triad-gpu",
"triad-sim",
"triad-window",
"triad-app",
"triad-cubes",
"triad-headless",
]
resolver = "3"

[workspace.dependencies]
triad-gpu = { path = "triad-gpu" }
triad-sim = { path = "triad-sim" }
triad-window = { path = "triad-window" }
glam = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"
bytemuck = { version = "1.24", features = ["derive"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
