[package]
name = "triad-app"
version = "0.1.0"
edition = "2024"
description = "Main application for triad - a visualization and reconstruction tool"

[[bin]]
name = "triad"
path = "src/main.rs"

[dependencies]
triad-gpu = { workspace = true }
triad-window = { workspace = true }
triad-train = { workspace = true }
triad-data = { workspace = true }
triad-capture = { workspace = true }
glam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytemuck = { workspace = true }
clap = { version = "4.4", features = ["derive"] }

