[package]
name = "triad-app"
version = "0.1.0"
edition = "2024"
description = "Minimal placeholder application during the Triad refactor"

[[bin]]
name = "triad"
path = "src/main.rs"

[dependencies]
triad-gpu = { workspace = true }
triad-window = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytemuck = { workspace = true }
tracing-tracy = { version = "0.11", optional = true }

[features]
default = []
tracy = ["tracing-tracy", "triad-window/tracy", "triad-gpu/tracy"]
