[package]
name = "triad-cubes"
version = "0.1.0"
edition = "2024"
description = "Instanced cubes demo: depth + draw_indexed_indirect"

[[bin]]
name = "triad-cubes"
path = "src/main.rs"

[dependencies]
triad-gpu = { workspace = true }
triad-window = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytemuck = { workspace = true }
