[package]
name = "triad-gpu"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "27.0.1"
thiserror = "2.0.17"
pollster = "0.3"
glam = "0.30.9"
image = "0.25"
bytemuck = { version = "1.24.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde-ply = "0.2"
serde_json = "1.0"
delaunator = "1.0"
tracing-tracy = { version = "0.11", optional = true }

[features]
default = []
tracy = ["tracing-tracy"]