[package]
name = "triad-ui"
version = "0.1.0"
edition = "2024"
description = "UI primitives and text rendering for triad applications"

[dependencies]
triad-gpu = { path = "../triad-gpu" }
wgpu = "27.0.1"
glam = "0.30"
cosmic-text = "0.12"
bytemuck = { version = "1.24", features = ["derive"] }
tracing = "0.1"

